# graph

./: README.md  default.nix  graph.cabal  shell.nix
app/: Main.hs
src/Graph/: Parse.hs
tests/: doctests.hs
