name:                graph
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Sam Davis
maintainer:          sam@samgd.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Graph.Parse
  build-depends:       base         >= 4.9 && < 4.10
                     , containers   >= 0.5 && < 0.6
                     , directory    >= 1.2 && < 1.3
                     , parsec       >= 3.1 && < 3.2
                     , parsec-utils >= 0.1 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable graph
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 4.10
                     , graph
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
