name:                graph
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Sam Davis
maintainer:          sam@samgd.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Graph.Parse
  build-depends:       base         >= 4.9 && < 4.10
                     , containers   >= 0.5 && < 0.6
                     , directory    >= 1.2 && < 1.3
                     , parsec       >= 3.1 && < 3.2
                     , parsec-utils >= 0.1 && < 0.2

executable graph
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 4.10
                     , graph

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base       >= 4.9  && < 4.10
                     , doctest    >= 0.11 && < 0.12
                     , QuickCheck >= 2.8  && < 3.0

